--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "license": "MIT",
   "devDependencies": {
     "css-loader": "^0.28.4",
-    "extract-text-webpack-plugin": "^3.0.0",
     "node-sass": "^4.5.3",
+    "postcss-loader": "^2.0.6",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "webpack": "^3.3.0"
@@ -19,6 +19,7 @@
     "webpack": "webpack ./javascript/entry.js bundle.js"
   },
   "dependencies": {
+    "extract-text-webpack-plugin": "^3.0.0",
     "global": "^4.3.2"
   }
 }
