--- a/package.json
+++ b/package.json
@@ -8,10 +8,15 @@
   "license": "MIT",
   "devDependencies": {
     "css-loader": "^0.28.4",
+    "file-loader": "^0.11.2",
+    "isomorphic-fetch": "^2.2.1",
+    "jquery": "^3.2.1",
+    "materialize-css": "^0.99.0",
     "node-sass": "^4.5.3",
     "postcss-loader": "^2.0.6",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
+    "url-loader": "^0.5.9",
     "webpack": "^3.3.0"
   },
   "scripts": {
